2002-07-17  Han-Wen  <hanwen@cs.uu.nl>

	* lily/parser.yy (Repeated_music): shift duration log for tremolo
	repeats, instead of klutzing around.

	* lily/chord-tremolo-engraver.cc (acknowledge_grob): set X parent
	of stem tremolo grobs.

	* scm/music-functions.scm (shift-duration-log): new function, add
	to duration log of all notes.

	* lily/duration.cc: add compression factor arguments to
	make-duration.
	compression-factor, dot-count, duration-log: add scheme functions.

	* lily/mark-engraver.cc (process_music): allow \mark to take a
	number as argument as well.

2002-07-16  Han-Wen  <hanwen@cs.uu.nl>

	* lily/rest.cc (after_line_breaking): only translate the whole
	rest if we have more than 1 staff line

	* lily/parser.yy (property_def): only allow #Scheme as \property
	argument.

2002-07-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: release 1.5.68

	* scripts/lilypond-book.py: fixes by Tom Cato Amundsen.

2002-07-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam-quanting.cc (score_forbidden_quants): split beam
	quanting functionality.
	(quanting): argh. Forgot how linear interpolation works. Bugfix.

	* Documentation/index.texi (Top): add whole-big-page documentation.

	* lily/side-position-interface.cc (general_side_position):
	Subtract parent offset iso. adding it. (Huh? How could this have
	worked?)

	* lily/clef-engraver.cc (stop_translation_timestep): add staff to
	OctavateEight support.

	* scripts/lilypond-book.py: add smallverbatim option.

	* lily/beam.cc (quanting): bugfix. Behave sanely when no visible
	stems.

	* lily/accidental-placement.cc (position_accidentals): add padding
	property. Increase default setting to 0.2. 

2002-07-15  Han-Wen  <hanwen@cs.uu.nl>

	* lily/paper-column.cc (before_line_breaking): urg. bugfix.

	* lily/separating-line-group-engraver.cc (finalize): don't replace
	right-items, but add to list. This fixes a bug when a staff ends
	with cross-staff voice switching away.
 
2002-07-14  Han-Wen  <hanwen@cs.uu.nl>
